fix connection attempts when thing disposed
Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>